appId: com.metheorium.mobile
---
- runFlow: ../_bootstrap/devClient.yaml
- assertVisible:
    id: "S-100"
- tapOn: "Log In"
- extendedWaitUntil:
    visible:
      id: "S-103"
    timeout: 15000
- assertVisible:
    id: "S-103"
